--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,5 +1,2 @@
 FROM php:7.2-apache
-WORKDIR /var/www/html/
-COPY . .
-RUN docker-php-ext-install mysqli
-EXPOSE 80
+RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
