--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,13 @@
-server {
-    listen 8080;
+events {
+    worker_connections 1024;
+}
 
-    index index.html;
+http {
+    server {
+        index index.html;
 
-    location ~ \.php {
-        proxy_pass https://apache-php;
-    }
-
-    location / {
-        root /var/www/static;
+        location ~ \.php {
+            proxy_pass http://apache-php;
+        }
     }
 }
