--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./apache-php/src:/var/www/html
       - ./apache-php/000-default.conf:/etc/apache2/sites-available/000-default.conf
   mysql:
+    platform: linux/x86_64
     build: mysql
     restart: always
     volumes:
