--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,8 @@ services:
     restart: always
     ports:
       - "6379:6379"
+  mongodb:
+    build: ./mongodb
+    restart: always
+    ports:
+      - "27017:27017"
