hw6 graphs added

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
         index index.html;
 
-        location ~ \.php {
+        location ~ (\.php)|(\.png) {
             proxy_pass http://apache-php;
         }
     }
