--- a/apache-php/000-default.conf
+++ b/apache-php/000-default.conf
@@ -14,7 +14,7 @@
     DBDMax 20
     DBDExptime 300
 
-    <Directory "/var/www/html/admin">
+    <Directory "/var/www/html">
 
         AuthBasicProvider dbd
 
