--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
         index index.html;
 
-        location ~ (\.php)|(\.png) {
+        location ~ (\.php)|(\.png)|(\.js)|(\.css) {
             proxy_pass http://apache-php;
         }
     }
